(feat) prepared the project for local testing, readme is now available as well